Removed horizontal scrollbars in the logical framework (issue 0000022)

--- a/sigmah/src/main/java/org/sigmah/public/sigmah.css
+++ b/sigmah/src/main/java/org/sigmah/public/sigmah.css
@@ -363,7 +363,6 @@ body {
 	border-collapse: collapse;
 	padding: 0;
 	font-size: 10pt;
-	margin: 16px;
 }
 
 .calendar-header {
@@ -627,8 +626,14 @@ body {
 }
 
 /* ----------------------------------------------- Log frame */
+/*
 .logframe-grid-main-panel .x-box-inner {
-	overflow: auto;
+	overflow-y: scroll;
+}
+*/
+
+.logframe-body {
+    overflow-y: scroll;
 }
 
 .logframe-grid-add-action,.logframe-grid-add-group-action {
